whatsapp.html: make partition persistent
This will allow us to save the cookies

--- a/whatsapp.html
+++ b/whatsapp.html
@@ -5,6 +5,6 @@
     <script src="whatsapp.js"></script>
   <body>
     <div id="dummy-workaround"></div>
-    <webview src="https://web.whatsapp.com/"></webview>
+    <webview src="https://web.whatsapp.com" partition="persist:whatsapp"></webview>
   </body>
 </html>
